# dt8007

./: .gitignore  CMakeLists.txt  deis-config.yaml  deis-plugin.cpp  posefeedback1.yaml  rundeis.sh  splinefollow-plugin.cpp  splinefollow.yaml  student-code.c  student-code.h
lecture-activities/: odometry-and-path-following--group-activities-1--deis-2014.tex  odometry-and-path-following--group-activities-2--deis-2014.tex
lecture-code/: .gitignore  Makefile  kinematics.c  ptctrl.c  splinebase.c  splinecurve.c  test-wheel.c  trapezoidal.c  wheel.c  wheel.h
lecture-slides/: kinematics.pdf_tex  odometry-and-path-following--deis-2013.tex  odometry-and-path-following--deis-2014.tex  ptctrl.pdf_tex  rtr.pdf_tex  trapezoidal-velocity.pdf_tex  wheel-control.pdf_tex
npm2-setup/: CMakeLists.txt  deis-config.yaml  deis-plugin.cpp  piesim.h  posefeedback2.yaml  splinefollow-plugin.cpp  splinefollow.yaml  student-code.c
